@@ -52,6 +52,7 @@ version 2.0.0:
 	* Many problems related to having an IM conversation and a chat open
 	  with the same name (Andrew Hart)
 	* Improved buddy list searching with CTRL+F
+	* ICQ encoding fix for offline buddies (Ilya Konstantinov)
 
 	Preference changes:
 	* Removed "Dim idle buddies" buddy list preference, default to "Yes."
